<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="io.github.kafumi.jsonconvertersample.MainActivity">

    <CheckBox
        android:id="@+id/nullable_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/nullable_property"/>

    <Button
        android:id="@+id/fetch_valid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fetch_valid" />

    <Button
        android:id="@+id/fetch_null_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fetch_null_values" />

    <Button
        android:id="@+id/fetch_missing_properties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fetch_missing_properties" />

    <Button
        android:id="@+id/fetch_invalid_type_strings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fetch_invalid_type_strings" />

    <Button
        android:id="@+id/fetch_invalid_type_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fetch_invalid_type_numbers" />

    <TextView
        android:id="@+id/fetch_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@color/lightGrey"
        android:padding="8dp" />

</LinearLayout>
